src/css/base.css
html {
    font-family: Helvetica, sans-serif;
    font-size: 18px;
    margin: 1em;
}
h1, h2, h3, h4, h5, h6 {
    font-family: Georgia, serif;
}
pre, form {
    background-color: #eee;
    margin: 0;
    padding: 1em;
}
fieldset {
    border: 0;
    margin-left: 0;
}
input {
    padding: .5em;
}
.back-link {
    float: right;
}

